fixed minor alignment issues

--- a/src/sass/components/_feature.scss
+++ b/src/sass/components/_feature.scss
@@ -5,6 +5,9 @@
 
   align-items: start;
   // padding-top: 3rem;
+  &-heading {
+    justify-self: center;
+  }
 }
 
 .feature {
