--- a/src/sass/components/_skills.scss
+++ b/src/sass/components/_skills.scss
@@ -1,5 +1,5 @@
 .section-skills {
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
 
   justify-content: center;
   align-content: center;
